<resources>
    <string name="app_name">NudaClient</string>

    <!--인증(로그인, 회원가입)-->
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="no_account">아직 계정이 없으신가요?</string>
    <string name="register">회원가입</string>

    <!-- 회원가입 제목 -->
    <string name="regTitle1">기본정보 입력</string>
    <string name="regTitle2">배송정보 입력</string>
    <string name="regtitle3">맞춤 추천을 위한 사전 체크</string>
    <string name="regSubtitle3">나만을 위한 추천을 받을 수 있어요!</string>

    <!-- 회원 정보 -->
    <string name="nickname">닉네임</string>
    <string name="pw_now">현재 비밀번호</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="receiver">수령인</string>
    <string name="phone">휴대폰번호</string>
    <string name="address">배송지</string>

    <!-- 유효성 검사 -->
    <string name="valid_nickname">+ 4자 이상 10자 이하</string>
    <string name="valid_id">+ 4자 이상 16자 이하</string>
    <string name="valid_pw1">+ 8자 이상</string>
    <string name="valid_pw2">+ 영문 대문자, 소문자, 숫자, 특수문자 중 2개 이상</string>
    <string name="valid_pw_check_false">비밀번호가 일치하지 않습니다</string>
    <string name="valid_pw_check_true">비밀번호가 일치합니다</string>
    <string name="valid_pw_check_noPW">유효한 비밀번호를 먼저 입력해주세요</string>
    <string name="valid_receiver">이름을 입력해주세요</string>
    <string name="valid_phone">휴대폰 번호를 입력해주세요</string>
    <string name="valid_address">주소 찾기를 통해 주소를 입력해주세요</string>
    <string name="valid_address_detail">상세 주소를 입력해주세요</string>

    <!--검사 버튼 텍스트(중복, 이메일 검증 등)-->
    <string name="btnValid_nickname_false">이미 사용 중인 닉네임 입니다</string>
    <string name="btnValid_nickname_true">사용 가능한 닉네임 입니다</string>
    <string name="btnValid_id_false">이미 사용 중인 아이디입니다</string>
    <string name="btnValid_id_true">사용 가능한 아이디입니다</string>
    <string name="btnValid_email_false">올바른 이메일 형식이 아닙니다</string>
    <string name="btnValid_email_duplicate">이미 가입된 이메일입니다</string>
    <string name="btnValid_email_true">입력하신 이메일로 인증번호를 보냈습니다</string>
    <string name="btnValid_email_fail">인증번호 전송에 실패했습니다</string>
    <string name="btnValid_email_certify_noEmail">이메일 입력 후 인증번호를 받아주세요"</string>
    <string name="btnValid_email_certify_empty">인증번호 6자리를 입력해주세요</string>"
    <string name="btnValid_email_certify_false">인증번호가 일치하지 않습니다</string>
    <string name="btnValid_email_certify_fail">입력 횟수를 초과, 인증번호를 다시 요청해주세요</string>
    <string name="btnValid_email_certify_true">인증이 완료되었습니다</string>

    <!--  입력창 힌트 텍스트  -->
    <string name="hint_email">example@naver.com</string>
    <string name="hint_email_certify">인증번호 6자리</string>
    <string name="hint_zip">우편번호</string>
    <string name="hint_address">주소</string>
    <string name="hint_address_detail">상세 주소</string>

    <!--회원가입 버튼 텍스트-->
    <string name="btn_checkDuplicate">중복 확인</string>
    <string name="btn_check">확인</string>
    <string name="btn_send">보내기</string>
    <string name="btn_confirm">인증하기</string>
    <string name="btn_findAddress">주소 찾기</string>
    <string name="btn_next">다음</string>
    <string name="btn_prev">이전</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_save">저장</string>

    <!--설문 텍스트-->
    <string name="survey_sensitivity">생리대 사용 시 자극을 느낀 적이 있나요?</string>
    <string name="survey_sensitivity_low">거의 없음</string>
    <string name="survey_sensitivity_middle">가끔</string>
    <string name="survey_sensitivity_high">자주</string>
    <string name="survey_scent">생리대 향에 대한 선호도는 어떤가요?</string>
    <string name="survey_scent_low">무향</string>
    <string name="survey_scent_middle">은은한 향</string>
    <string name="survey_scent_high">강한 향</string>
    <string name="survey_flow">월결 기간 중 하루 평균 교체 횟수는?</string>
    <string name="survey_flow_low">2-3회 이하</string>
    <string name="survey_flow_middle">4-5회</string>
    <string name="survey_flow_high">6회 이상</string>
    <string name="survey_thickness">평소 더 선호하는 생리대 두께는?</string>
    <string name="survey_thickness_low">얆음</string>
    <string name="survey_thickness_middle">일반</string>
    <string name="survey_thickness_high">도톰함</string>
    <string name="survey_adhesion">제품의 접착력을 중요하게 생각하시나요?</string>
    <string name="survey_adhesion_notImportant">중요하지 않음</string>
    <string name="survey_adhesion_Important">중요함</string>
    <string name="survey_adhesion_veryImportant">매우 중요함</string>
    <string name="survey_add_product">사용 후 만족했던 제품을 입력해주세요</string>

    <!--상품 카드-->
    <string name="product_brand">테스트 브랜드</string>
    <string name="product_name">테스트 생리대 이름</string>
    <string name="product_ingredient_list">테스트A(표지), 테스트B(표지), 테스트C(흡수체) ...</string>
    <string name="product_star">n.n(nnn)</string>
    <string name="product_review">(nnn)</string>
    <string name="product_price">n,nnn원</string>
    <string name="product_rank">N</string>

    <!--네비게이션 메뉴-->
    <string name="home">홈</string>
    <string name="recommend">맞춤추천</string>
    <string name="wishlist">관심</string>
    <string name="my">마이</string>

    <!--검색-->
    <string name="searchbar">제품을 검색하세요</string>
    <string name="search_product">제품검색</string>
    <string name="search_ingredient">성분검색</string>
    <string name="popular_searchKeywords">인기 검색어</string>
    <string name="category">성분 카테고리</string>
    <string name="used_to">에 사용되는 성분</string>

    <!--홈-->
    <string name="go_to_ranking_page">전체 제품 랭킹 보러가기</string>
    <string name="popular_to">에게 인기 있는 제품</string>
    <string name="product">제품</string>

    <!--마이페이지-->
    <string name="mypage">마이페이지</string>
    <string name="accountDeletion">회원 탈퇴</string>
    <string name="edit_account">프로필 수정</string>
    <string name="edit_delivery">배송정보 관리</string>
    <string name="go_to_recommend">내 맞춤 제품 랭킹 보러가기</string>
    <string name="manage_keyword">키워드 관리</string>
    <string name="payment">결제</string>
    <string name="order_history">주문 내역</string>
    <string name="review">리뷰</string>
    <string name="create_new_review">새 리뷰 작성</string>
    <string name="my_reviews">내 리뷰</string>
    <string name="logout">로그아웃</string>

    <!--키워드-->
    <string name="keyword_title">님의 키워드</string>
    <string name="keyword_setting">키워드 설정</string>
    <string name="keyword_irritationLevel">민감도</string>
    <string name="keyword_scent">향</string>
    <string name="keyword_flow">흡수력</string>
    <string name="keyword_safety">안전성</string>
    <string name="keyword_adhesion">접착력</string>
    <string name="keyword_low">낮음</string>
    <string name="keyword_normal">보통</string>
    <string name="keyword_high">높음</string>
    <string name="keyword_noScent">무향</string>
    <string name="keyword_light">약함</string>
    <string name="keyword_strong">강함</string>
    <string name="keyword_notImportant">무관</string>
    <string name="keyword_important">중시</string>

    <!--상품-->
    <string name="ingredient">성분</string>
    <string name="product_info">상품 정보</string>
    <string name="see_more_info">상품 정보 더보기</string>
    <string name="product_ranking_instruction">제품별 성분 위험도 점수에 따라 순위가 측정됩니다</string>
    <string name="product_filter_default">기본순</string>
    <string name="product_filter_review">리뷰 많은 순</string>
    <string name="product_filter_high_rating">별점 높은 순</string>
    <string name="product_filter_low_rating">별점 낮은 순</string>
    <string name="product_filter_wish">찜 많은 순</string>
    <string name="sort">정렬</string>
    <string name="recommend_to">님에게 최적화된 제품은</string>
    <string name="keyword_filter_all">전체</string>
    <string name="recommend_info">리뷰, 관심 등의 데이터가 반영되어 추천 랭킹이 업데이트 됩니다</string>
    <string name="recommend_ranking">추천 랭킹</string>
    <string name="filtering">필터링</string>


    <!--성분-->
    <string name="ingredient_component">성분 구성</string>
    <string name="riskLevel_safe">안전</string>
    <string name="riskLevel_caution">주의</string>
    <string name="riskLevel_danger">위험</string>
    <string name="riskLevel_instruction">(H코드 기준 위험도 측정)</string>
    <string name="component_coverLayer">표지</string>
    <string name="component_absorbentCore">흡수체</string>
    <string name="component_waterproofLayer">방수층</string>
    <string name="component_adhesive">접착제</string>
    <string name="component_additionalParts">기타</string>
    <string name="component_coverLayerInfo">피부에 직접 닿는 가장 윗부분으로, 생리혈을 빠르게 흡수체로 통과시키고 피부에는 부드러움과 건조함을 제공하는 역할</string>
    <string name="component_absorbentCoreInfo">생리혈을 빠르게 흡수해 내부에 저장하고 역류를 방지하여 보송한 착용감을 유지하는 역할</string>
    <string name="component_waterproofLayerInfo">생리혈이 속옷이나 외부로 새어나가지 않도록 차단해주는 하단 보호층 역할</string>
    <string name="component_adhesiveInfo">생리대를 속옷에 안정적으로 고정해 활동 중에도 밀리거나 들뜨지 않도록 돕는 역할</string>
    <string name="component_additionalPartsInfo">향을 더하거나 밀착력을 높여 착용감과 편의성을 보완하는 부가 요소 역할</string>
    <string name="ingredients_all">전체 성분</string>
    <string name="ingredients_caution">주의 성분</string>
    <string name="ingredients_danger">위험 성분</string>
    <string name="ingredients_highlight">관심 성분</string>
    <string name="ingredients_avoid">피할 성분</string>
    <string name="ingredients_all2">전성분</string>
    <string name="highlight">관심</string>
    <string name="avoid">피하기</string>
    <string name="riskLevel">위험도</string>
    <string name="ingredient_info">성분 설명</string>
    <string name="caution">주의 사항</string>
    <string name="component">구성 요소</string>


    <!--리뷰-->
    <string name="review_analysis">리뷰 AI 분석</string>
    <string name="positive">긍정</string>
    <string name="negative">부정</string>
    <string name="now_trend">지금 이 제품의 트렌드는</string>
    <string name="write_review">리뷰 쓰기</string>
    <string name="no_analysis">리뷰 10개 이상부터 AI 분석이 제공됩니다</string>
    <string name="non_product">존재하지 않는 상품입니다</string>
    <string name="no_reviews">작성된 리뷰가 없습니다</string>
    <string name="how_about_this_product">이 제품 어떠셨나요?</string>
    <string name="input_rating">별점을 입력해주세요 (필수)</string>
    <string name="detail_review">상세 리뷰를 남겨주세요</string>
    <string name="detail_review2">(필수)</string>
    <string name="input_photo">사진 첨부</string>
    <string name="input_photo2">(선택)</string>
    <string name="create_review">리뷰 등록</string>
    <string name="search_review">리뷰를 작성할 제품을 검색해주세요</string>
    <string name="no_positive_keywords">분석된 긍정 키워드가 없습니다</string>
    <string name="no_negative_keywords">분석된 부정 키워드가 없습니다</string>


    <!--나의 관심-->
    <string name="my_wishlist">나의 관심</string>
    <string name="wish_prouduct">찜한 상품</string>
    <string name="wish_brand">즐겨찾는 브랜드</string>
    <string name="wish_ingredient">즐겨찾는 성분</string>


    <!--장바구니, 결제-->
    <string name="shoppingCart">장바구니</string>
    <string name="instantPurchase">바로 구매</string>
    <string name="select_all">전체 선택</string>
    <string name="delete_selected">선택 삭제</string>
    <string name="cart_text1">총</string>
    <string name="cart_text2">개 상품</string>
    <string name="order_complete">결제가 완료되었습니다</string>
    <string name="order_number_1">주문하신 상품의 주문번호는</string>
    <string name="order_number_2">입니다</string>
    <string name="order_info">배송 정보</string>
    <string name="order_name">수령인</string>
    <string name="order_phone">휴대폰번호</string>
    <string name="order_address">주소</string>
    <string name="go_to_home">홈으로 이동</string>

</resources>