<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="25dp"
    android:paddingHorizontal="30dp"
    android:background="@drawable/bg_bottom_sheet"
    >

    <!--정렬-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:fontFamily="@font/pretendard_regular"
        android:textSize="16sp"
        android:textColor="@color/gray1"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />

    <RadioGroup
        android:id="@+id/rg_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/rb_default"
            style="@style/RadioBtn_Filter"
            android:text="@string/product_filter_default"
            />
        <RadioButton
            android:id="@+id/rb_review"
            style="@style/RadioBtn_Filter"
            android:text="@string/product_filter_review"
            />
        <RadioButton
            android:id="@+id/rb_high_rating"
            style="@style/RadioBtn_Filter"
            android:text="@string/product_filter_high_rating"
            />
        <RadioButton
            android:id="@+id/rb_low_rating"
            style="@style/RadioBtn_Filter"
            android:text="@string/product_filter_low_rating"
            />
        <RadioButton
            android:id="@+id/rb_wish"
            style="@style/RadioBtn_Filter"
            android:text="@string/product_filter_wish"
            />


    </RadioGroup>
</LinearLayout>