<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_rank"
        android:fontFamily="@font/pretendard_bold"
        android:textSize="20sp"
        android:textColor="@color/gray1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/iv_product"
        style="@style/ImageProduct"
        android:clipToOutline="true"
        android:src="@drawable/image23"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_rank"
        />

    <TextView
        android:id="@+id/tv_productBrand"
        style="@style/TextProductBrand"
        android:text="@string/product_brand"
        app:layout_constraintStart_toEndOf="@id/iv_product"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_productName"
        style="@style/TextProductName"
        android:text="@string/product_name"
        app:layout_constraintTop_toBottomOf="@id/tv_productBrand"
        app:layout_constraintStart_toStartOf="@id/tv_productBrand"
        />

    <TextView
        android:id="@+id/tv_productIngredient"
        style="@style/TextProductIngredient"
        android:text="@string/product_ingredient_list"
        app:layout_constraintTop_toBottomOf="@id/tv_productName"
        app:layout_constraintStart_toStartOf="@id/tv_productBrand"
        />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_star"
        android:layout_marginTop="9dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_product"
        app:layout_constraintStart_toStartOf="@id/tv_productBrand"
        />

    <TextView
        android:id="@+id/tv_productStar"
        style="@style/TextProductStarandReview"
        android:text="@string/product_star"
        app:layout_constraintBottom_toBottomOf="@id/iv_product"
        app:layout_constraintStart_toEndOf="@id/iv_star"
        />

    <TextView
        android:id="@+id/tv_productReview"
        style="@style/TextProductStarandReview"
        android:text="@string/product_review"
        app:layout_constraintBottom_toBottomOf="@id/iv_product"
        app:layout_constraintStart_toEndOf="@id/tv_productStar"
        />

    <TextView
        android:id="@+id/tv_productPrice"
        style="@style/TextProductPrice"
        android:text="@string/product_price"
        app:layout_constraintTop_toBottomOf="@id/tv_productIngredient"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>